# 2019_android_walkman

./: .gitmodules  README.md  README_JP.md  build_command.txt  fw_update_keys.txt  ksu_fix.patch
WalkmanUSBAudio/: settings.gradle
WalkmanUSBAudio/app/: build.gradle
WalkmanUSBAudio/app/src/main/cpp/: AaudioPlaybackInterface.cpp  AaudioPlaybackInterface.h  CMakeLists.txt  IPlaybackInterface.h  NullPlaybackInterface.cpp  NullPlaybackInterface.h  SpAudioPlaybackInterface.cpp  SpAudioPlaybackInterface.h  UacEventListener.cpp  UacEventListener.h  UacSink.cpp  UacSink.h  UacStatusUIUpdater.cpp  UacStatusUIUpdater.h  UsbAudioController.cpp  UsbAudioController.h  android_log.h  native-lib.cpp
WalkmanUSBAudio/gradle/wrapper/: gradle-wrapper.properties
kernel_imx/: HowToBuild.txt  walkman.config
kernel_imx/KernelSU/kernel/: Makefile  core_hook.c  kernel_compat.c  kernel_compat.h
kernel_imx/drivers/: Kconfig  Makefile
kernel_imx/drivers/android/: binder.c  binder_alloc.c
kernel_imx/drivers/bluetooth/: mx8_bt_rfkill.c
kernel_imx/drivers/char/: Kconfig  mem.c
kernel_imx/drivers/cpufreq/: cpufreq_conservative.c  cpufreq_interactive.c
kernel_imx/drivers/extcon/: Kconfig  Makefile  extcon-fusb303d_icx.c  extcon-fusb303d_icx.h
kernel_imx/drivers/firmware/: psci.c
kernel_imx/drivers/input/: input.c
kernel_imx/drivers/irqchip/: irq-gic-v3.c
kernel_imx/drivers/mfd/: bd71837.c
kernel_imx/fs/: exec.c  open.c  read_write.c  stat.c
kernel_imx/init/: main.c
kernel_imx/kernel/: cpu.c
kernel_imx/mm/: gup.c  huge_memory.c  oom_kill.c
nwwmdecrypt/src/: Main.java
(+380 files in other folders)
